--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,23 @@ body{
 
 .start_btn,
 .info_box,
-.quiz_box{
+.quiz_box,
+.result_box{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2), 
+                0px 4px 8px 0 rgba(0,0,0,0.19);
+    transition: all 0.3s ease;
+}
+
+.info_box.activeInfo,
+.quiz_box.activeQuiz{
+    z-index: 5;
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
 }
 
 /* Start Quiz Button Styling */
@@ -33,10 +45,12 @@ body{
 }
 
 .info_box{
-    display: none;
     width: 540px;
     background: #fff;
     border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
 .info_box .info_title{
@@ -45,7 +59,7 @@ body{
     border-bottom: 1px solid lightgray;
     display: flex;
     align-items: center;
-    padding: 0 35px;
+    padding: 0 30px;
     font-size: 20px;
     font-weight: 600;
 }
@@ -77,6 +91,7 @@ body{
     margin: 0 5px;
     height: 40px;
     width: 100px;
+    outline: none;
     border: 1px solid transparent;
     border-radius: 5px;
     color: #fff;
@@ -105,10 +120,12 @@ body{
 }
 
 .quiz_box{
-    display: none;
     width: 550px;
     background: white;
     border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
 .quiz_box header{
@@ -263,4 +280,61 @@ footer .next_btn{
 
 footer .next_btn:hover{
     background: #0263ca;
+}
+
+.result_box{
+    background: #fff;
+    width: 450px;
+    padding: 25px 30px;
+    border-radius: 5px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.result_box .icon{
+    font-size: 100px;
+    color: blueviolet;
+    margin-bottom: 10px;
+}
+
+.result_box .complete_text{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.result_box .score_text span{
+    display: flex;
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.score_text span p{
+    font-weight: 600;
+    padding: 0 4px;
+}
+
+.result_box .buttons{
+    display: flex;
+    margin: 20px 0;
+}
+
+.result_box .buttons button{
+    margin: 0 10px;
+    height: 45px;
+    padding: 0 20px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 5px;
+    border: 1px solid blueviolet;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
