--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,8 @@ body{
 }
 
 .info_box.activeInfo,
-.quiz_box.activeQuiz{
+.quiz_box.activeQuiz,
+.result_box.activeResult{
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -178,12 +179,11 @@ body{
     user-select: none;
 }
 
-.quiz_box header .timer_line{
+.quiz_box header .time_line{
     position: absolute;
     bottom: 0px;
     left: 0px;
     height: 3px;
-    width: 50%;
     background: red;
 }
 
@@ -289,6 +289,7 @@ footer .total_que span p:first-child{
 }
 
 footer .next_btn{
+    display: none;
     height: 40px;
     padding: 0 13px;
     font-size: 18px;
